--- a/src/tool.yml
+++ b/src/tool.yml
@@ -2,7 +2,7 @@ tools:
   foobar:
     title: Foo Bar
     description: A dummy tool to exemplify the YAML file
-    version: 0.1
+    # removed this field - version: 0.1 # version should be provided by Git tags (e.g. v0.1.0)
     parameters:
       foo_int: 
         type: integer
@@ -20,6 +20,6 @@ tools:
         type: integer
         array: true
       foo_matrix:
-        type: file
+        type: asset # changed from file
       foo_csv:
-        type: file
+        type: asset # changed from file
